--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,12 +12,14 @@ stages:
 - deploy
 
 flake8:
+  allow_failure: true
   stage: Static Analysis
   script:
   - pip install flake8
   - flake8 --max-line-length=120 ./papercli/*.py
 
 pylint:
+  allow_failure: true
   stage: Static Analysis
   script:
   - pip install pylint
