--- a/.pylintrc
+++ b/.pylintrc
@@ -485,7 +485,7 @@ valid-metaclass-classmethod-first-arg=cls
 
 # List of qualified class names to ignore when counting class parents (see
 # R0901)
-ignored-parents=
+ignored-parents=W0622
 
 # Maximum number of arguments for function / method.
 max-args=5
